# genefam-dist

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
docs/: 001.Whidden_USPR_comparison.html  001.Whidden_USPR_comparison.ipynb  002.gene_distance_signal.html  002.gene_distance_signal.ipynb  003.distance_signal_missingdata.html  003.distance_signal_missingdata.ipynb  004.treesignalmodule_c.html  004.treesignalmodule_c.ipynb  005.treesignal_python_module.html  005.treesignal_python_module.ipynb  006.missing_data_within_gene.html  006.missing_data_within_gene.ipynb  007.euk_tol_plot.html  007.euk_tol_plot.ipynb  008.guenomu_plot.ipynb  009.simphy_simulation.html  009.simphy_simulation.ipynb  010.euk_tol_raxml_igtp.html  010.euk_tol_raxml_igtp.ipynb  010.euk_tol_raxml_igtp.nbconvert.html  010.euk_tol_raxml_igtp.nbconvert.ipynb  011.revising_006_for_BC2.ipynb  012.oma_drosophila.ipynb  performance_table.npy
docs/.ipynb_checkpoints/: 001.Whidden_USPR_comparison-checkpoint.ipynb  002.gene_distance_signal-checkpoint.ipynb  003.distance_signal_missingdata-checkpoint.ipynb
docs/ms001/: discussion.tex  introduction.tex  methods.tex  phylosignal.aux  phylosignal.bbl  phylosignal.blg  phylosignal.fdb_latexmk  phylosignal.fls  phylosignal.out  phylosignal.tex  phylosignal_oldcompile.tex  references.bib  results.tex
lib/: .module_distance.c.swp  Makefile.am  Makefile.in  __unused_functions.c  alignment.c  alignment.h  bipartition.c  bipartition.h  config.h.in  config.h.in~  empirical_frequency.c  empirical_frequency.h  genefam_dist.c  genefam_dist.h  hashtable.c  hashtable.h  likelihood.c  likelihood.h  lowlevel.c  lowlevel.h  module_distance.c  module_distance.h  nexus_common.c  nexus_common.h  phylogeny.c  phylogeny.h  prob_distribution.c  prob_distribution.h  prob_distribution_aux.c  prob_distribution_aux.h  random_number.c  random_number.h  random_number_aux.h  random_number_gen.c  random_number_gen.h  topology_build.c  topology_build.h  topology_common.c  topology_common.h  topology_mrca.c  (+7 more)
python/: MANIFEST  README  o.x  setup.py  treesignalmodule.c
python/src/: .treesignalmodule.c.swp  treesignalmodule.c
python/treesignal/: treesignal.py  utils.py
python/treesignal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: .distmatrix_genetree_sptree.c.swp  Makefile.am  Makefile.in  concatenate_trees.c  distmatrix_genetree_sptree.c  distsignal_genetree_sptree.c  find_best_trees.c  find_best_trees.c_original  generate_spr_trees.c  main_distance.c  main_spr.c  spr_distance.c  test_python_functions.c
